2010-05-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9455: RTE incorrectly modifies external links and causes problems with subdomains
	* Fixed bug #14360: htmlArea RTE: Toolbar and context menu styling needs adjustments

2010-05-07  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14335: Install Tool buttons have no hover state (thanks to Steffen Gebert)

2010-05-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to feature #14014: htmlArea RTE should use version numbering method for CSS and JS files
	* Fixed bug #14349: htmlArea RTE: Unavailability of hot key map may cause plugin to fail
	* Follow-up to feature #14277: Apply gzip compression to htmlArea RTE concatenated js script
	* Follow-up to feature #14014: Some htmlArea RTE csss files are not versioned in the FE

2010-05-07  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14326: [Performance] Preload ExtJS in BE
	* Fixed bug #14288: opendocs can cause duplicate id html errors (thanks to Stefan Galinski)

2010-05-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14202: htmlArea RTE: Tables may get lost when using remove format feature

2010-05-07  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14293: IRRE loading indicator makes label text jump (Thanks to Lars Houmark)

2010-05-07  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #5003: prefixRelPath() incorrectly changes links to anchors (Thanks to Jigal van Hemert)

2010-05-07  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #13495: Workspace tiled Preview shows same version of Page

2010-05-07  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14331: BE search is broken

2010-05-06  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14028: Code cleanup in class.t3lib_userauthgroup.php - part 1: foreach loops / variable renaming (Thanks to Kjeld Schumacher)
	* Fixed bug #14315: Filelist: AJAX bug with multiple file mounts in the folder tree