@@ -1,3 +1,7 @@
+2010-05-12  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
+
+	* Fixed bug #14052: cache_treelist is out of date after setting hidden=0
+
 2010-05-10  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9455: RTE incorrectly modifies external links and causes problems with subdomains
